--- a/ecom/package.json
+++ b/ecom/package.json
@@ -17,6 +17,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.22",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1"
