--- a/ecom/package.json
+++ b/ecom/package.json
@@ -16,12 +16,15 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "feed": "^4.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.22",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1"
+    "passport-local-mongoose": "^6.0.1",
+    "rss-generator": "0.0.3",
+    "rss-parser": "^3.9.0"
   }
 }
